# openai_agent_sdk

./: LICENSE  ModelSettings1.py  README.md  WebSearchTool.py  agent_as_tool.ipynb  agent_flow.ipynb  agent_flow.py  handoff1.py  handoff3.py  include_usage.py  metadata.py  parallel_tool_call1.py  parallel_tool_call2.py  pyproject.toml  requirements.txt  tool_choice.py
Agent_ModelSettings/: ModelSettings2.py  README.md  reasoning_process.py
Agent_as_tool/: agent_as_tool.ipynb  agent_as_tool.py
Basics/: README.md  code_gemini.py  default_model.py  mycode.py  with_model.py
Context/: README.md  context_dataclass.py  context_pydantic.py  dynamic_instructions.py  input_with_context.py
Function_Tools/: README.md  tool_calling.py
GRAPHVIZ/: README.md  agent_flow.ipynb
Guardrails/: README.md  input_guardrail.py  output_guardrail.py
HANDOFF/: README.md  handoff2.py  handoff3.py  input_filter.py  on_handoff_input_type.py  tool_description_override.py  tool_name_override.py
HOSTED_TOOLS/: README.md  fileSearch.py
REPL/: run_demo_loop1.py  run_demo_loop2.py
Structured_INP_OUT/: README.md  structured.py
Tracing/: README.md  tracing1.py  tracing2.py
agentic_patterns/: README.md  agent_as_tool.py  deterministic.py  handoff_routing.py  llm_as_judge.py  parallelization.py
agentic_patterns/forcing_tool_use/: README.md  custom_function.py  run_llm_again.py  stop_on_first_tool.py
clone_or_assign/: README.md  assign.py  clone.py  deep_copy.py  shallow_copy.py
multi_turn_convo/: README.md  convo_history.py
